<resources>
    <string name="auto_search">Auto Search</string>
    <string name="printItemNumber">Print Item Number</string>
    <string name="max_credit">Max Credit</string>
    <string name="cust_store">Customer store</string>
    <string name="item_info">Item Info</string>
    <string name="VisitMedicalReport"> Visit Medical Report</string>
    <string name="Adoption">Adoption</string>
    <string name="tool">Tool</string>
    <string name="doubleVisit">Double Visit</string>
    <string name="voucherTax">Voucher Tax</string>
    <string name="app_name">Salesman Manager</string>
    <string name="version"> V 300.23 </string>
    <string name="app_username">Username</string>
    <string name="app_password">Password</string>
    <string name="app_dataManagement">Data Management</string>
    <string name="app_activities">Activities</string>
    <string name="app_reports">Reports</string>
    <string name="app_sales_inv">Sales</string>
    <string name="app_ret_inv">Return</string>
    <string name="app_ret_inv2">Return</string>
    <string name="app_cust_order">Order</string>
    <string name="app_cust_order2">Order</string>
    <string name="app_request">Stock Request</string>
    <string name="app_imp_data">Import Data</string>
    <string name="app_refresh_data">Refresh Data</string>
    <string name="app_exp_data">Export Data</string>
    <string name="noteposition">note position</string>
    <string name="top">Top</string>
    <string name="Bottom">Bottom</string>
    <string name="app_clear_local">Clear Local Data</string>
    <string name="app_cash_report">Cash Report</string>
    <string name="app_daily_sales_s">Daily Sales Summary Report</string>
    <string name="app_daily_sales_d">Daily Sales details Report</string>
    <string name="app_stock_onhand">Stock On Hand Report Report</string>
    <string name="app_cust_log_rep">Customer Log Report</string>
    <string name="app_receipt">Payment</string>
    <string name="title_activity_main"> </string>
    <string name="app_sign_out">Day End</string>
    <string name="customers_locations">Customers Locations</string>
    <string name="sales_man_map">Salesman Map</string>
    <string name="app_day_start">Log In</string>
    <string name="app_cust_no">Customer Account</string>
    <string name="app_sign_in_visit">Customer Check In</string>
    <string name="app_sign_out_visit">Customer Check Out</string>
    <string name="serialcode"> Serial Code</string>
    <string name="kindvoucher">Kind Voucher</string>
    <string name="app_select_cust">Select Customer</string>
    <string name="app_enter_cust_code">Enter Customer Code</string>
    <string name="app_Confirm">Confirm</string>
    <string name="app_search">Search</string>
    <string name="app_name_tv">Name</string>
    <string name="app_select_customer">Select Customer</string>
    <string name="app_contact_no">Contact No.</string>
    <string name="app_no_cust">No Customer Selected !</string>
    <string name="customer_name" />
    <string name="app_cust_name">Customer Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_cust">Add Customer</string>
    <string name="action_settings">Settings</string>
    <string name="action_company_info">Company Info</string>
    <string name="de_export">Re-Export</string>
    <string name="action_print_voucher">Print Voucher</string>
    <string name="action_print_voucher2">Do You Want Print Voucher</string>
    <string name="action_print_payment">Print Payment</string>
    <string name="action_printer_setting">Print Setting</string>
    <string name="title_activity_activities">Activities</string>
    <string name="add_cust">Add Customer</string>
    <string name="cust_name">Customer Name</string>
    <string name="order">Order</string>
    <string name="app_trans_kind">Voucher Kind</string>
    <string name="payemtnTerm">Payment Term</string>
    <string name="app_cash">Cash   </string>
    <string name="cash">Cash</string>
    <string name="app_credit">Credit</string>
    <string name="app_remark">Remark  </string>
    <string name="app_sub_total">Total : </string>
    <string name="app_disc">Discount  </string>
    <string name="app_tax">Tax : </string>
    <string name="app_net_sales">Net Sales : </string>
    <string name="total_qty">Total Qty </string>
    <string name="total_qty_inventory">Total Qty  </string>
    <string name="app_item_no">Item No</string>
    <string name="app_desc">Description</string>
    <string name="app_qty">Unit Qty</string>
    <string name="app_price">Price</string>
    <string name="app_line_disc">Disc</string>
    <string name="app_tax_perc">Tax Percent</string>
    <string name="app_amount">Amount</string>
    <string name="app_zero">0.000</string>
    <string name="app_conf_invKindT">Changing invoice kind</string>
    <string name="app_conf_invKindM">Are you sure you want to change invoice kind ?</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_invoice">Invoice</string>
    <string name="app_receiveFrom">Received From</string>
    <string name="app_receiptDetails">Receipt Details</string>
    <string name="app_paymentDetails">Payment Details</string>
    <string name="app_paymentType">Payment Type</string>
    <string name="app_cheque">Cheque</string>
    <string name="app_cheque_no">Cheque No</string>
    <string name="app_cheque_date">Cheque Date</string>
    <string name="app_bank_name">Bank Name</string>
    <string name="app_cheq_no">Cheque No</string>
    <string name="app_cheq_date">Cheque Date</string>
    <string name="app_cheq_val">Cheque Value</string>
    <string name="app_item_code">Code</string>
    <string name="app_unit">Unit</string>
    <string name="app_qty_on_hand">Q.O.H</string>
    <string name="net_qty">Net Qty</string>
    <string name="app_bonus">Bonus</string>
    <string name="app_add_to_list">Add To List</string>
    <string name="app_done">Done</string>
    <string name="weight">Weight</string>
    <string name="use_weight">Use Weight</string>
    <string name="offer_dialog"> New Offer</string>
    <string name="offer_"> Offers</string>
    <string name="promo_type">Offer Type </string>
    <string name="bonus_item">Bonus Item </string>
    <string name="discount_value">Discount Value </string>
    <string name="of">Of</string>
    <string name="totalafterdiscount">Total after Disc </string>
    <string name="app_cust_balance">Customer Balance</string>
    <string name="app_max_debit">Debit Limit</string>
    <string name="app_avail_debit">Allowed Debit</string>
    <string name="app_last_inv_date">Last Invoice Date</string>
    <string name="app_total_cust_sale">Total Customer Purchase</string>
    <string name="app_ok">Ok</string>
    <string name="app_add_items">Add Items</string>
    <string name="app_update_items">Update Items</string>
    <string name="app_cust_info">Customer Information</string>
    <string name="app_item_add">Added Successfully</string>
    <string name="app_fail_to_add_item">Items has not been added, insure your entries</string>
    <string name="app_select_option">Select An Option</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_confirm_dialog">Confirm</string>
    <string name="app_confirm_dialog_msg">Are you sure you want to close current activity?</string>
    <string name="app_confirm_dialog_clear">Are you sure you want to clear all ?</string>
    <string name="app_alert_dialog_maxDiscount">Sorry , total discount is greater than max discount</string>
    <string name="app_confirm_dialog_save">Are you sure you want to save the data ?</string>
    <string name="app_confirm_dialog_clear_item">Do you want to delete this item ?</string>
    <string name="app_disc_type">Discount Type</string>
    <string name="app_disc_type1">Value</string>
    <string name="app_disc_type2">Percent</string>
    <string name="app_disc_value">Discount Value</string>
    <string name="app_disc_value2">Value</string>
    <string name="app_disc_l">Discount</string>
    <string name="app_total">Total</string>
    <string name="app_disc_">Discount</string>
    <string name="customer_log_report">Customer Log Report</string>
    <string name="transactions_report">Transactions Report</string>
    <string name="vouchers_report">Vouchers Report</string>
    <string name="OrgPricevouchers_report">Original Price Vouchers Report</string>
    <string name="items_report">Items Report</string>
    <string name="stock_request_vouchers_report">Stock Request Voucher Report</string>
    <string name="stock_request_items_report">Stock Request Items Report</string>
    <string name="payments_details_report">Payment Details Report</string>
    <string name="stock_request_report">Stock Request Report</string>
    <string name="inventory_report">Inventory Report</string>
    <string name="quantity">Quantity</string>
    <string name="SALES_MAN_ID">Sales Man ID</string>
    <string name="CUS_CODE">Customer Code</string>
    <string name="CUS_NAME">Customer Name</string>
    <string name="CHECK_IN_DATE">Check In Date</string>
    <string name="CHECK_IN_TIME">Check In Time</string>
    <string name="use_weight_case">Use Weight Case</string>
    <string name="allow_sale_with_minus">Allow Sale With Minus</string>
    <string name="can_change_price">Can Change Price</string>
    <string name="can_change_priceReturn">Can Change Price in Return Vochers</string>
    <string name="min_sale_price">Min Sale Price</string>
    <string name="read_discount_from_offers">Read Discount From Offers</string>
    <string name="work_online">Work Online</string>
    <string name="paymethod_check">Cash Invoices</string>
    <string name="bonus_not_allowed">Bonus not allowed</string>
    <string name="no_offer_for_credit">No Offer For Credit Invoice</string>
    <string name="passowrddata">Password imp/exp Data</string>
    <string name="arabic_language">Arabic Language</string>
    <string name="hideQty">Hide Qty for salesMan</string>
    <string name="lockcash">Lock Cash Report</string>
    <string name="preventNew">Prevent New Order</string>
    <string name="requiredNote">Required Note</string>
    <string name="preventTotaldisc">Prevent Total discount</string>
    <string name="automatic_cheque">Automatic cheque</string>
    <string name="tafqit">tafqit</string>
    <string name="preventPayMethod">Prevent change Pay Method</string>
    <string name="noReturnInvoice">No Return Invoice</string>
    <string name="workSerial">Work With Serial</string>
    <string name="ShowItemImage">Show Item Image</string>
    <string name="ReturnVoch_perm_checkBox"> طلب موافقة لعمل مرتجع</string>
    <string name="ApproveAdmin">Approve Admin</string>
    <string name="saveOnly">Save Only</string>
    <string name="showSolidQty">Show Solid Qty</string>
    <string name="readOfferFromAdmin">Offer and price From Admin</string>
    <string name="checkQtyServer">Check Qty Server</string>
    <string name="dontShowTaxOnprinter">Dont Show Tax On Printer</string>
    <string name="continousReadingBarcod">Continous Reading Barcod</string>
    <string name="itemUnit">Item Unit</string>
    <string name="sumCurrentQty">Sum Current Qty</string>
    <string name="dontDuplicateItem">Dont Duplicate Item</string>
    <string name="salesoffers">Offers just for sales</string>
    <string name="checkqtyinorder">check qty in orders</string>
    <string name="locationtracker">location tracker</string>
    <string name="aqaba_tax_exemption">Aqaba Tax Exemption</string>
    <string name="items_Unit">items Unit</string>
    <string name="EndTripReport">not making any sale Report</string>
    <string name="AcountatatmentVisable">Account Statment visibility</string>
    <string name="whatsappform">مشاركة الفاتورة ك عرض سعر</string>
    <string name="taxAfterDisc">Tax After Disc</string>
</resources>