<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/app_activities" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/app_reports" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/app_sign_out" />

        <item
            android:id="@+id/sales_man_map"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/sales_man_map" />

        <item
            android:id="@+id/customers_location"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/customers_locations" />

    </group>

    <item android:title="Data Management"
        android:icon="@mipmap/ic_import_export">
        <menu>
            <item
                android:id="@+id/nav_imp_data"
                android:icon="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:title="@string/app_imp_data" />
            <item
                android:id="@+id/nav_Refresh_data"
                android:icon="@drawable/refresh"
                android:title="@string/app_imp_data" />
            <item
                android:id="@+id/nav_exp_data"
                android:icon="@drawable/ic_keyboard_arrow_up_black_24dp"
                android:title="@string/app_exp_data" />
            <item
                android:id="@+id/nav_clear_local"
                android:icon="@drawable/ic_clear_all_black_24dp"
                android:title="@string/app_clear_local" />

        </menu>
    </item>

</menu>
