<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GenralsettFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_weight="1"
        android:orientation="vertical">




        <CheckBox
            android:id="@+id/work_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/work_online"
            android:textColor="@color/text_view_color"
            android:textSize="14sp"
            android:visibility="visible" />



        <CheckBox
            android:id="@+id/PassowrdData_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/passowrddata"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/ArabicLanguage_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/arabic_language"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />



        <CheckBox
            android:id="@+id/lockcash_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/lockcash"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/preventNewOrder_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/preventNew"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />




        <CheckBox
            android:id="@+id/automatic_cheque_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/automatic_cheque"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/tafqit_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/tafqit"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />


        <CheckBox
            android:id="@+id/approveAdmin_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/ApproveAdmin"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />


        <CheckBox
            android:id="@+id/offerFromAdmin_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/readOfferFromAdmin"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />
        <CheckBox
            android:id="@+id/qtyFromServer_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/checkQtyServer"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/dontShowTax_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/dontShowTaxOnprinter"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />


        <CheckBox
            android:id="@+id/sumCurentQty_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/sumCurrentQty"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />



        <CheckBox
            android:id="@+id/locationtracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/locationtracker"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />
        <CheckBox
            android:id="@+id/aqaba_tax_exemption_checBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/aqaba_tax_exemption"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Items_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/items_Unit"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />
        <CheckBox
            android:id="@+id/EndTripReport_checBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/EndTripReport"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />
        <CheckBox
            android:id="@+id/AcountatatmentVisable_checBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:checked="true"
            android:text="@string/AcountatatmentVisable"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />


        <CheckBox
            android:id="@+id/ReturnVoch_perm_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:checked="true"
            android:text="@string/ReturnVoch_perm_checkBox"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />
        <CheckBox
            android:id="@+id/CompanyinfoINPdf_CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:checked="true"
            android:text="تقارير pdf دون عرض اسم الشركة ورقم الهاتف"
            android:textColor="@color/text_view_color"
            android:textSize="14sp" />


    </LinearLayout>

</FrameLayout>